--- a/brutal/fastfetch/config.jsonc
+++ b/brutal/fastfetch/config.jsonc
@@ -1,17 +1,16 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    "type": "file",
-    "source": "/home/monky/.config/fastfetch/logo.txt",
+    "type": "small",
     "color": {
       "1": "white",
-      "2": "black"
+      "2": "black",
     },
     "height": 15,
     "width": 30,
     "padding": {
       "top": 5,
-      "left": 3
+      "left": 5,
     },
   },
   "modules": [
