--- a/brutal/waybar/config
+++ b/brutal/waybar/config
@@ -1,7 +1,7 @@
 [
   {
     "layer": "top",
-    "output": "HDMI-A-3",
+    "output": "DP-1",
     "margin-top": 0,
     "margin-bottom": 0,
     "margin-left": 0,
