Added yazi to the binds for file management

--- a/shade/kitty/kitty.conf
+++ b/shade/kitty/kitty.conf
@@ -154,6 +154,7 @@ editor zed
 close_on_child_death no
 allow_remote_control yes
 listen_on unix:/tmp/kitty
+confirm_os_window_close 0
 update_check_interval 24
 startup_session none
 clipboard_control write-clipboard write-primary
