--- a/shade/hypr/conf/binds.conf
+++ b/shade/hypr/conf/binds.conf
@@ -8,7 +8,7 @@ bind = $mainMod, RETURN, exec, kitty # Open Kitty
 bind = $mainMod, Q, killactive # Close current window
 bind = $mainMod, M, exit # Exit Hyprland
 bind = $mainMod, L, exec, hyprlock
-bind = $mainMod, E, exec, GTK_THEME=Adwaita-dark nautilus # Opens the filemanager
+bind = $mainMod, E, exec, kitty -e yazi ~/ # Opens the filemanager
 bind = $mainMod, T, togglefloating # Toggle between tiling and floating window
 bind = $mainMod, F, fullscreen # Open the window in fullscreen
 bind = $mainMod, SPACE, exec, rofi -show drun # Open rofi
