--- a/shade/hypr/hyprland.conf
+++ b/shade/hypr/hyprland.conf
@@ -1,15 +1,16 @@
 
-#  _   _                  _                 _  
-# | | | |_   _ _ __  _ __| | __ _ _ __   __| | 
-# | |_| | | | | '_ \| '__| |/ _` | '_ \ / _` | 
-# |  _  | |_| | |_) | |  | | (_| | | | | (_| | 
-# |_| |_|\__, | .__/|_|  |_|\__,_|_| |_|\__,_| 
-#        |___/|_|                              
-#  
-# ----------------------------------------------------- 
+#  _   _                  _                 _
+# | | | |_   _ _ __  _ __| | __ _ _ __   __| |
+# | |_| | | | | '_ \| '__| |/ _` | '_ \ / _` |
+# |  _  | |_| | |_) | |  | | (_| | | | | (_| |
+# |_| |_|\__, | .__/|_|  |_|\__,_|_| |_|\__,_|
+#        |___/|_|
+#
+# -----------------------------------------------------
 # Full documentation https://wiki.hyprland.org
 
 source = ~/.config/hypr/conf/monitor.conf
+source = ~/.config/hypr/conf/env.conf
 source = ~/.config/hypr/conf/autostart.conf
 source = ~/.config/hypr/conf/cursor.conf
 source = ~/.config/hypr/conf/environments.conf
