Refactored rofi to match wallpaper colors more, also changed kitty a little

--- a/shade/kitty/kitty.conf
+++ b/shade/kitty/kitty.conf
@@ -71,7 +71,6 @@ tab_activity_symbol none
 tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title}"
 
 # ===== COLOR SCHEME - Dark Flow =====
-# Based on your wallpaper's deep blues and dark metallic tones
 
 # Basic colors
 foreground              #e6e9ef
@@ -142,8 +141,8 @@ color6  #50dcb4
 color14 #6bffc9
 
 # White
-color7  #a0a8b0
-color15 #e6e9ef
+color7  #7aa1ef
+color15 #d9dadd
 
 # ===== ADVANCED =====
 shell .
