--- a/shade/hypr/hyprpaper.conf
+++ b/shade/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = ~/Documents/Wallpapers/shade.webp
-wallpaper = ,~/Documents/Wallpapers/shade.webp
+preload = ~/dotfiles/shade/shade.webp
+wallpaper = ,~/dotfiles/shade/shade.webp
 splash = false
