Updated waybar for multimonitor

--- a/shade/hypr/conf/binds.conf
+++ b/shade/hypr/conf/binds.conf
@@ -37,7 +37,7 @@ bind = $mainMod, right, movefocus, r # Move focus right
 bind = $mainMod, up, movefocus, u # Move focus up
 bind = $mainMod, down, movefocus, d # Move focus down
 
-# Switch workspaces with mainMod + [0-9]
+# Switch workspaces with mainMod + [1-6]
 bind = $mainMod, 1, workspace, 1 # Switch to workspace 1
 bind = $mainMod, 1, exec, ~/.config/waybar/scripts/signal-waybar.sh
 bind = $mainMod, 2, workspace, 2 # Switch to workspace 2
@@ -50,8 +50,12 @@ bind = $mainMod, 5, workspace, 5 # Switch to workspace 5
 bind = $mainMod, 5, exec, ~/.config/waybar/scripts/signal-waybar.sh
 bind = $mainMod, 6, workspace, 6 # Switch to workspace 6
 bind = $mainMod, 6, exec, ~/.config/waybar/scripts/signal-waybar.sh
+bind = $mainMod, 7, workspace, 7 # Switch to workspace 7
+bind = $mainMod, 7, exec, ~/.config/waybar/scripts/signal-waybar.sh
+bind = $mainMod, 8, workspace, 8 # Switch to workspace 8
+bind = $mainMod, 8, exec, ~/.config/waybar/scripts/signal-waybar.sh
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
+# Move active window to a workspace with mainMod + SHIFT + [1-6]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1 #  Move window to workspace 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2 #  Move window to workspace 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3 #  Move window to workspace 3
