--- a/shade/hypr/conf/binds.conf
+++ b/shade/hypr/conf/binds.conf
@@ -14,6 +14,7 @@ bind = $mainMod, F, fullscreen # Open the window in fullscreen
 bind = $mainMod, SPACE, exec, rofi -show drun # Open rofi
 bind = $mainMod, V, exec, GTK_THEME=Adwaita-dark pavucontrol
 bind = $mainMod, X, exec, blueman-manager
+bind = $mainMod, O, exec, obsidian # Open Obsidian
 bind = $mainMod, Z, exec, kitty -e zed # Open Zed
 bind = $mainMod, C, exec, ~/.config/wrapper-cliphist.sh
 bind = $mainMod, P, pseudo, # dwindle
@@ -21,7 +22,7 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, D, exec, flatpak run com.discordapp.Discord
 bind = $mainMod, S, exec, kitty --class spotify_player_ws5 -e spotify_player
 bind = $mainMod SHIFT, S, exec, grimblast copy area
-bind = $mainMod, B, exec, firefox # Opens the browser
+bind = $mainMod, B, exec, flatpak run app.zen_browser.zen # Opens the browser
 bind = $mainMod SHIFT, W, exec, ~/dotfiles/scripts/reset_hyprpaper.sh
 bind = $mainMod SHIFT, B, exec, ~/dotfiles/scripts/reset_waybar.sh # Reload Waybar
 bind = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%+
