--- a/shade/hypr/conf/env.conf
+++ b/shade/hypr/conf/env.conf
@@ -6,6 +6,8 @@ env = HYPRCURSOR_SIZE,40
 env = TERM, $term
 env = EDITOR, $editor
 
+env = FILE_MANAGER, $file_manager
+
 env = LIBSEAT_BACKEND, logind
 
 # wayland support
