updated .zshrc and added swaync to autostart

--- a/shade/hypr/conf/autostart.conf
+++ b/shade/hypr/conf/autostart.conf
@@ -1,6 +1,7 @@
 exec-once = waybar
 exec-once = hyprpaper
 exec-once = langsort
+exec-once = swaync
 exec-once = wlsunset -t 4500 -T 6500 -s 23:59 -S 07:00
 exec-once = openrgb --device 0 --mode static --color FFFFFF
 exec-once = bash /home/monky/dotfiles/scripts/sync-config-nas.sh shade shade.webp
