--- a/shade/hypr/conf/binds.conf
+++ b/shade/hypr/conf/binds.conf
@@ -22,7 +22,7 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, D, exec, flatpak run com.discordapp.Discord
 bind = $mainMod, S, exec, kitty --class spotify_player_ws5 -e spotify_player
 bind = $mainMod SHIFT, S, exec, grimblast copy area
-bind = $mainMod, B, exec, flatpak run app.zen_browser.zen # Opens the browser
+bind = $mainMod, B, exec, flatpak run app.zen_browser.zen --ozone-platform=wayland # Opens the browser
 bind = $mainMod SHIFT, W, exec, ~/dotfiles/scripts/reset_hyprpaper.sh
 bind = $mainMod SHIFT, B, exec, ~/dotfiles/scripts/reset_waybar.sh # Reload Waybar
 bind = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%+
