--- a/shade/hypr/conf/binds.conf
+++ b/shade/hypr/conf/binds.conf
@@ -16,7 +16,8 @@ bind = $mainMod, V, exec, GTK_THEME=Adwaita-dark pavucontrol
 bind = $mainMod, X, exec, blueman-manager
 bind = $mainMod, O, exec, obsidian # Open Obsidian
 bind = $mainMod, Z, exec, kitty -e zed # Open Zed
-bind = $mainMod, C, exec, ~/.config/wrapper-cliphist.sh
+bind = $mainMod, C, exec, ~/dotfiles/scripts/wrapper-cliphist.sh
+bind = $mainMod, G, exec, ~/dotfiles/scripts/setup-workspaces.sh
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, D, exec, flatpak run com.discordapp.Discord
