--- a/brutal/hypr/conf/binds.conf
+++ b/brutal/hypr/conf/binds.conf
@@ -15,15 +15,15 @@ bind = $mainMod, SPACE, exec, rofi -show drun # Open rofi
 bind = $mainMod, V, exec, GTK_THEME=Adwaita-dark pavucontrol
 bind = $mainMod, X, exec, blueman-manager
 bind = $mainMod, Z, exec, kitty -e zed # Open Zed
-bind = $mainMod, C, exec, ~/.config/wrapper-cliphist.sh
+bind = $mainMod, C, exec, ~/dotfiles/scripts/wrapper-cliphist.sh
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, D, exec, flatpak run com.discordapp.Discord
 bind = $mainMod, S, exec, kitty --class spotify_player_ws5 -e spotify_player
 bind = $mainMod SHIFT, S, exec, grimblast copy area
 bind = $mainMod, B, exec, firefox # Opens the browser
-bind = $mainMod SHIFT, B, exec, ~/.config/ml4w/scripts/reload-waybar.sh # Reload Waybar
-bind = $mainMod SHIFT, W, exec, ~/.config/ml4w/scripts/reload-hyprpaper.sh # Reload hyprpaper after a changing the wallpaper
+bind = $mainMod SHIFT, B, exec, ~/dotfiles/scripts/reset_waybar.sh
+bind = $mainMod SHIFT, W, exec, ~/dotfiles/scripts/reset_hyprpaper.sh
 bind = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%+
 bind = , XF86AudioLowerVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%-
 bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
