--- a/shade/kitty/kitty.conf
+++ b/shade/kitty/kitty.conf
@@ -1,4 +1,6 @@
-# Kitty Configuration - Dark Flow Theme
+# Kitty Configuration - Flow Void Theme
+# Inspired by metallic curves flowing through deep space
+# Teal-cyan flows with strong blue accents
 
 # ===== FONTS =====
 font_family         JetBrainsMono Nerd Font
@@ -20,7 +22,7 @@ scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
 scrollback_pager_history_size 0
 
 # ===== MOUSE =====
-url_color #6494c4
+url_color #4dd0e1
 url_style curly
 open_url_with default
 url_prefixes http https file ftp gemini irc gopher mailto news git
@@ -52,9 +54,9 @@ draw_minimal_borders yes
 window_margin_width 8
 window_padding_width 12
 placement_strategy center
-active_border_color #6494c4
-inactive_border_color #2a2f3a
-bell_border_color #dc5050
+active_border_color #4dd0e1
+inactive_border_color #263238
+bell_border_color #ff6b9d
 
 # ===== TAB MANAGEMENT =====
 tab_bar_edge top
@@ -65,84 +67,84 @@ tab_bar_align left
 tab_bar_min_tabs 1
 tab_switch_strategy previous
 tab_fade 0.25 0.5 0.75 1
-tab_separator " ┇"
+tab_separator " ∿"
 tab_powerline_style slanted
 tab_activity_symbol none
 tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title}"
 
-# ===== COLOR SCHEME - Dark Flow =====
+# ===== COLOR SCHEME - Flow Void =====
 
 # Basic colors
-foreground              #e6e9ef
-background              #0f1419
+foreground              #b0bec5
+background              #0d1117
 selection_foreground    #ffffff
-selection_background    #3d4f66
+selection_background    #1a2332
 
 # Cursor colors
-cursor                  #6494c4
-cursor_text_color       #0f1419
+cursor                  #4dd0e1
+cursor_text_color       #0d1117
 
 # URL underline color when hovering with mouse
-url_color               #6494c4
+url_color               #4dd0e1
 
 # Kitty window border colors
-active_border_color     #6494c4
-inactive_border_color   #2a2f3a
-bell_border_color       #dc5050
+active_border_color     #4dd0e1
+inactive_border_color   #263238
+bell_border_color       #ff6b9d
 
 # OS Window titlebar colors
-wayland_titlebar_color  #141925
-macos_titlebar_color    #141925
+wayland_titlebar_color  #0f1419
+macos_titlebar_color    #0f1419
 
 # Tab bar colors
 active_tab_foreground   #ffffff
-active_tab_background   #6494c4
-inactive_tab_foreground #a0a8b0
-inactive_tab_background #1e2329
-tab_bar_background      #141925
-tab_bar_margin_color    #0f1419
+active_tab_background   #1976d2
+inactive_tab_foreground #78909c
+inactive_tab_background #1a1d23
+tab_bar_background      #0f1419
+tab_bar_margin_color    #0d1117
 
 # Colors for marks (marked text in the terminal)
-mark1_foreground #0f1419
-mark1_background #6494c4
-mark2_foreground #0f1419
-mark2_background #b4c8de
-mark3_foreground #0f1419
-mark3_background #8db0d6
+mark1_foreground #0d1117
+mark1_background #4dd0e1
+mark2_foreground #0d1117
+mark2_background #26c6da
+mark3_foreground #0d1117
+mark3_background #1976d2
 
 # The 16 terminal colors
 
 # Black
-color0  #0f1419
-color8  #2a2f3a
+color0  #0d1117
+color8  #263238
 
 # Red
-color1  #dc5050
-color9  #ff6b6b
+color1  #ff6b9d
+color9  #ff8a9b
 
-# Baby blue
-color2  #2074d4
-color10 #539ff5
+# Green
+color2  #26c6da
+color10 #4dd0e1
 
 # Yellow
-color3  #dcb450
-color11 #ffc66b
+color3  #ffc947
+color11 #ffd54f
 
 # Blue
-color4  #5080dc
-color12 #6b9bff
+color4  #1976d2
+color12 #42a5f5
 
 # Magenta
-color5  #b450dc
-color13 #d66bff
+color5  #ab47bc
+color13 #ba68c8
 
 # Cyan
-color6  #50dcb4
-color14 #6bffc9
+color6  #00bcd4
+color14 #26c6da
 
 # White
-color7  #7aa1ef
-color15 #d9dadd
+color7  #90a4ae
+color15 #eceff1
 
 # ===== ADVANCED =====
 shell .
@@ -224,7 +226,7 @@ map ctrl+shift+a>d set_background_opacity default
 map ctrl+shift+delete clear_terminal reset active
 
 # ===== VISUAL ENHANCEMENTS =====
-background_opacity 0.7
+background_opacity 0.6
 dynamic_background_opacity yes
 background_blur 20
 dim_opacity 0.75
@@ -232,10 +234,9 @@ dim_opacity 0.75
 # ===== BELL CUSTOMIZATION =====
 visual_bell_color none
 window_alert_on_bell yes
-bell_on_tab "🔔 "
+bell_on_tab "◦ "
 
 # ===== MOUSE ACTIONS =====
 mouse_map left click ungrabbed no_op
 mouse_map ctrl+left click ungrabbed mouse_handle_click selection link prompt
-mouse_map ctrl+left press ungrabbed mouse_selection rectangle
 mouse_map right press ungrabbed copy_to_clipboard
