--- a/shade/zed/settings.json
+++ b/shade/zed/settings.json
@@ -16,7 +16,7 @@
     "default_profile": "write",
     "default_model": {
       "provider": "copilot_chat",
-      "model": "claude-sonnet-4"
+      "model": "gemini-2.5-pro"
     }
   },
   "vim_mode": false,
