--- a/themes/tokyo-night/hypr/hyprlock.conf
+++ b/themes/tokyo-night/hypr/hyprlock.conf
@@ -11,8 +11,8 @@
 # BACKGROUND - Cyberpunk Cityscape
 background {
     monitor =
-    path = ~/Pictures/wallpapers/cyberpunk-cityscape.jpg
-    blur_size = 12
+    path = ~/dotfiles/themes/tokyo-night/tokyo-night.webp
+    blur_size = 1
     blur_passes = 3
     brightness = 0.7
     contrast = 1.1
