New mpris module for waybar

--- a/themes/tokyo-night/waybar-multi-monitor/config
+++ b/themes/tokyo-night/waybar-multi-monitor/config
@@ -9,7 +9,7 @@
   "margin-left": 16,
   "margin-right": 16,
 
-  "modules-left": ["hyprland/workspaces"],
+  "modules-left": ["hyprland/workspaces", "mpris"],
   "modules-center": ["hyprland/window"],
   "modules-right": ["memory", "pulseaudio", "clock"],
 
@@ -59,6 +59,18 @@
     "format-muted": "vol muted",
     "on-click": "pavucontrol",
     "tooltip": false
+  },
+
+  "mpris": {
+    "format": "{artist} - {title}",
+    "format-paused": " {artist} - {title}",
+    "format-playing": " {artist} - {title}",
+    "format-stopped": "",
+    "max-length": 50,
+    "tooltip-format": "{player}: {artist} - {title}",
+    "on-click": "playerctl play-pause",
+    "on-scroll-up": "playerctl next",
+    "on-scroll-down": "playerctl previous"
   }
 },
 {
@@ -72,7 +84,7 @@
   "margin-right": 16,
 
   "modules-left": ["hyprland/workspaces"],
-  "modules-center": ["hyprland/window"],
+  "modules-center": ["hyprland/window", "mpris"],
   "modules-right": ["clock"],
 
   "hyprland/workspaces": {
@@ -99,6 +111,15 @@
     "format": "{}",
     "max-length": 50,
     "separate-outputs": true
+  },
+
+  "mpris": {
+    "format": "{title} ",
+    "format-paused": "{title} ",
+    "format-playing": "{title} ",
+    "format-stopped": "No music",
+    "max-length": 40,
+    "tooltip-format": "{player}: {artist} - {title}"
   },
 
   "clock": {
