Make sure discord starts silently

--- a/themes/tokyo-night/hypr/conf/windowrules.conf
+++ b/themes/tokyo-night/hypr/conf/windowrules.conf
@@ -1,7 +1,7 @@
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
 # Send Discord to workspace 5
-windowrulev2 = workspace 5, class:^(.*[Dd]iscord.*)$
+windowrulev2 = workspace 5 silent, class:^(.*[Dd]iscord.*)$
 
 # Send Spotify to workspace 5
 windowrulev2 = workspace 5 silent, class:^spotify_player_ws5$
