--- a/themes/tokyo-night/hypr/conf/binds.conf
+++ b/themes/tokyo-night/hypr/conf/binds.conf
@@ -16,6 +16,7 @@ bind = $mainMod, V, exec, GTK_THEME=Adwaita-dark pavucontrol
 bind = $mainMod, X, exec, blueman-manager
 bind = $mainMod, O, exec, obsidian # Open Obsidian
 bind = $mainMod, Z, exec, kitty -e zed # Open Zed
+bind = $mainMod, G, exec, kitty -e goland & # Open GoLand
 bind = $mainMod, C, exec, ~/dotfiles/scripts/wrapper-cliphist.sh
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
@@ -63,7 +64,8 @@ bind = $mainMod SHIFT, 3, movetoworkspace, 3 #  Move window to workspace 3
 bind = $mainMod SHIFT, 4, movetoworkspace, 4 #  Move window to workspace 4
 bind = $mainMod SHIFT, 5, movetoworkspace, 5 #  Move window to workspace 5
 bind = $mainMod SHIFT, 6, movetoworkspace, 6 #  Move window to workspace 6
-
+bind = $mainMod SHIFT, 7, movetoworkspace, 7 #  Move window to workspace 7
+bind = $mainMod SHIFT, 8, movetoworkspace, 8 #  Move window to workspace 8
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1 # Scroll workspaces
 bind = $mainMod, mouse_up, workspace, e-1 # Scroll workspaces
