--- a/themes/tokyo-night/hypr/conf/monitor.conf
+++ b/themes/tokyo-night/hypr/conf/monitor.conf
@@ -7,3 +7,5 @@ workspace = 3, monitor:DP-1
 workspace = 4, monitor:DP-1
 workspace = 5, monitor:HDMI-A-1, default:true
 workspace = 6, monitor:HDMI-A-1
+workspace = 7, monitor:HDMI-A-1
+workspace = 8, monitor:HDMI-A-1
