--- a/themes/tokyo-night/hypr/conf/binds.conf
+++ b/themes/tokyo-night/hypr/conf/binds.conf
@@ -16,12 +16,12 @@ bind = $mainMod, V, exec, GTK_THEME=Adwaita-dark pavucontrol
 bind = $mainMod, X, exec, blueman-manager
 bind = $mainMod, O, exec, obsidian # Open Obsidian
 bind = $mainMod, Z, exec, kitty -e zed # Open Zed
-bind = $mainMod, G, exec, kitty -e goland & # Open GoLand
+bind = $mainMod, G, exec, kitty --class=floating-game-launcher -e ~/dotfiles/scripts/game-launcher.sh # Open Game Launcher
 bind = $mainMod, C, exec, ~/dotfiles/scripts/wrapper-cliphist.sh
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, D, exec, flatpak run com.discordapp.Discord
-bind = $mainMod, S, exec, kitty --class spotify_player_ws5 -e spotify_player
+bind = $mainMod, D, exec, flatpak run com.discordapp.Discord # Discord
+bind = $mainMod, S, exec, kitty -e spotify_player # Spotify
 bind = $mainMod SHIFT, S, exec, grimblast copy area
 bind = $mainMod, B, exec, flatpak run app.zen_browser.zen --ozone-platform=wayland # Opens the browser
 bind = $mainMod SHIFT, W, exec, ~/dotfiles/scripts/reset_hyprpaper.sh
