--- a/themes/tokyo-night/hypr/conf/windowrules.conf
+++ b/themes/tokyo-night/hypr/conf/windowrules.conf
@@ -13,3 +13,8 @@ windowrulev2 = noshadow, floating:0
 windowrulev2 = float, class:^floating-clipmenu$
 windowrulev2 = size 800 400, class:^floating-clipmenu$
 windowrulev2 = center, class:^floating-clipmenu$
+
+# force game launcher to float
+windowrulev2 = float, class:^floating-game-launcher$
+windowrulev2 = size 600 300, class:^floating-game-launcher$
+windowrulev2 = center, class:^floating-game-launcher$
