Some small changes

--- a/themes/tokyo-night/hypr/conf/binds.conf
+++ b/themes/tokyo-night/hypr/conf/binds.conf
@@ -21,7 +21,7 @@ bind = $mainMod, C, exec, ~/dotfiles/scripts/wrapper-cliphist.sh
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, D, exec, flatpak run com.discordapp.Discord # Discord
-bind = $mainMod, S, exec, kitty -e spotify_player # Spotify
+bind = $mainMod, S, exec, kitty --class=spotify_player_ws5 -e spotify_player # Spotify
 bind = $mainMod SHIFT, S, exec, grimblast copy area
 bind = $mainMod, B, exec, flatpak run app.zen_browser.zen --ozone-platform=wayland # Opens the browser
 bind = $mainMod SHIFT, W, exec, ~/dotfiles/scripts/reset_hyprpaper.sh
