--- a/themes/tokyo-night/waybar-multi-monitor/config
+++ b/themes/tokyo-night/waybar-multi-monitor/config
@@ -84,7 +84,7 @@
   "margin-right": 16,
 
   "modules-left": ["hyprland/workspaces"],
-  "modules-center": ["hyprland/window", "mpris"],
+  "modules-center": ["hyprland/window"],
   "modules-right": ["clock"],
 
   "hyprland/workspaces": {
@@ -112,16 +112,6 @@
     "max-length": 50,
     "separate-outputs": true
   },
-
-  "mpris": {
-    "format": "{title} ",
-    "format-paused": "{title} ",
-    "format-playing": "{title} ",
-    "format-stopped": "No music",
-    "max-length": 40,
-    "tooltip-format": "{player}: {artist} - {title}"
-  },
-
   "clock": {
     "timezone": "Europe/Amsterdam",
     "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
