--- a/themes/tokyo-night/hypr/conf/autostart.conf
+++ b/themes/tokyo-night/hypr/conf/autostart.conf
@@ -1,12 +1,9 @@
 exec-once = waybar
 exec-once = hyprpaper
-exec-once = langsort
 exec-once = wlsunset -t 4500 -T 6500 -s 23:59 -S 07:00
 exec-once = openrgb --device 0 --mode static --color 008080
-exec-once = bash /home/monky/dotfiles/scripts/sync-config-nas.sh shade shade.webp
 exec-once = cliphist daemon
 exec-once = wl-paste --watch cliphist store
 exec-once = swaync
-exec-once = swayidle -w \
-    timeout 1800s 'hyprctl dispatch dpms off' \
-    resume 'hyprctl dispatch dpms on'
+exec-once = hypridle &
+
