--- a/themes/tokyo-night/hypr/conf/env.conf
+++ b/themes/tokyo-night/hypr/conf/env.conf
@@ -24,3 +24,4 @@ env = QT_WAYLAND_DISABLE_WINDOWDECORATION, 1
 env = _JAVA_AWT_WM_NONREPARENTING, 1
 
 env = MOZ_ENABLE_WAYLAND, 1
+env = STEAM_USE_OZONE,1
