--- a/themes/tokyo-night/hypr/conf/monitor.conf
+++ b/themes/tokyo-night/hypr/conf/monitor.conf
@@ -1,11 +1,11 @@
-monitor = DP-1, 1920x1080@165, 0x0, 1
-monitor = HDMI-A-1, 2048x1152@60, -2048x365, 1
+monitor = DP-2, 1920x1080@165, 0x0, 1
+monitor = DP-1, 2560x1440@240, 1920x-450, 1.25
 
-workspace = 1, monitor:DP-1
+workspace = 1, monitor:DP-1, default:true
 workspace = 2, monitor:DP-1
 workspace = 3, monitor:DP-1
 workspace = 4, monitor:DP-1
-workspace = 5, monitor:HDMI-A-1, default:true
-workspace = 6, monitor:HDMI-A-1
-workspace = 7, monitor:HDMI-A-1
-workspace = 8, monitor:HDMI-A-1
+workspace = 5, monitor:DP-2
+workspace = 6, monitor:DP-2
+workspace = 7, monitor:DP-2
+workspace = 8, monitor:DP-2
