--- a/themes/tokyo-night/hypr/conf/autostart.conf
+++ b/themes/tokyo-night/hypr/conf/autostart.conf
@@ -6,4 +6,4 @@ exec-once = cliphist daemon
 exec-once = wl-paste --watch cliphist store
 exec-once = swaync
 exec-once = hypridle &
-
+exec-once = tasks daemon &
