--- a/themes/tokyo-night/hypr/conf/binds.conf
+++ b/themes/tokyo-night/hypr/conf/binds.conf
@@ -12,17 +12,20 @@ bind = $mainMod, E, exec, kitty -e yazi ~/ # Opens the filemanager
 bind = $mainMod, T, togglefloating # Toggle between tiling and floating window
 bind = $mainMod, F, fullscreen # Open the window in fullscreen
 bind = $mainMod, SPACE, exec, rofi -show drun # Open rofi
-bind = $mainMod, V, exec, GTK_THEME=Adwaita-dark pavucontrol
+bind = $mainMod, V, exec, kitty --class pavucontrolrs -e pavucontrolrs
 bind = $mainMod, X, exec, blueman-manager
-bind = $mainMod, O, exec, obsidian # Open Obsidian
 bind = $mainMod, Z, exec, kitty -e zed # Open Zed
 bind = $mainMod, G, exec, kitty --class=floating-game-launcher -e ~/dotfiles/scripts/game-launcher.sh # Open Game Launcher
 bind = $mainMod, C, exec, ~/dotfiles/scripts/wrapper-cliphist.sh
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, D, exec, flatpak run com.discordapp.Discord # Discord
+bind = $mainMod, U, exec, flatpak run com.protonvpn.www # ProtonVPN
 bind = $mainMod, S, exec, kitty --class=spotify_player_ws5 -e spotify_player # Spotify
 bind = $mainMod SHIFT, S, exec, grimblast copy area
+bind = $mainMod SHIFT, N, exec, playerctl next
+bind = $mainMod SHIFT, P, exec, playerctl previous
+bind = $mainMod SHIFT, SPACE, exec, playerctl play-pause
 bind = $mainMod, B, exec, flatpak run app.zen_browser.zen --ozone-platform=wayland # Opens the browser
 bind = $mainMod SHIFT, W, exec, ~/dotfiles/scripts/reset_hyprpaper.sh
 bind = $mainMod SHIFT, B, exec, ~/dotfiles/scripts/reset_waybar.sh # Reload Waybar
@@ -39,7 +42,7 @@ bind = $mainMod, right, movefocus, r # Move focus right
 bind = $mainMod, up, movefocus, u # Move focus up
 bind = $mainMod, down, movefocus, d # Move focus down
 
-# Switch workspaces with mainMod + [1-6]
+# Switch workspaces with mainMod + [1-8]
 bind = $mainMod, 1, workspace, 1 # Switch to workspace 1
 bind = $mainMod, 1, exec, ~/.config/waybar/scripts/signal-waybar.sh
 bind = $mainMod, 2, workspace, 2 # Switch to workspace 2
@@ -57,7 +60,7 @@ bind = $mainMod, 7, exec, ~/.config/waybar/scripts/signal-waybar.sh
 bind = $mainMod, 8, workspace, 8 # Switch to workspace 8
 bind = $mainMod, 8, exec, ~/.config/waybar/scripts/signal-waybar.sh
 
-# Move active window to a workspace with mainMod + SHIFT + [1-6]
+# Move active window to a workspace with mainMod + SHIFT + [1-8]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1 #  Move window to workspace 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2 #  Move window to workspace 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3 #  Move window to workspace 3
