--- a/themes/tokyo-night/hypr/conf/windowrules.conf
+++ b/themes/tokyo-night/hypr/conf/windowrules.conf
@@ -6,6 +6,9 @@ windowrulev2 = workspace 5 silent, class:^(.*[Dd]iscord.*)$
 # Send Spotify to workspace 5
 windowrulev2 = workspace 5 silent, class:^spotify_player_ws5$
 
+# Send pavucontrolrs to workspace 5
+windowrulev2 = workspace 5 silent, class:^pavucontrolrs$
+
 # Disable shadow for windows with a title
 windowrulev2 = noshadow, floating:0
 
@@ -18,3 +21,8 @@ windowrulev2 = center, class:^floating-clipmenu$
 windowrulev2 = float, class:^floating-game-launcher$
 windowrulev2 = size 600 300, class:^floating-game-launcher$
 windowrulev2 = center, class:^floating-game-launcher$
+
+# force protonvpn to float and go to workspace 5
+windowrulev2 = float, class:^(protonvpn-app)$
+windowrulev2 = center, class:^(protonvpn-app)$
+windowrulev2 = workspace 5 silent, class:^(protonvpn-app)$
