--- a/themes/tokyo-night/kitty/kitty.conf
+++ b/themes/tokyo-night/kitty/kitty.conf
@@ -63,7 +63,7 @@ command_on_bell none
 
 # ▓▓▓ MOUSE - CYBERPUNK INTERACTION ▓▓▓
 mouse_hide_wait 3.0
-url_color #4D7D82
+# url_color #4D7D82
 url_style curly
 show_hyperlink_targets yes
 strip_trailing_spaces never
@@ -91,82 +91,82 @@ cursor_blink_interval 0.75
 cursor_stop_blinking_after 15.0
 
 # ▓▓▓ CYBERPUNK CITYSCAPE COLOR SCHEME ▓▓▓
-foreground #E4E9E8
-background #0B0C0D
-selection_foreground #0B0C0D
-selection_background #4D7D82
+# foreground #E4E9E8
+# background #0B0C0D
+# selection_foreground #0B0C0D
+# selection_background #4D7D82
 
 # Cursor colors - Greenish cyan glow
-cursor #4D7D82
-cursor_text_color #0B0C0D
+# cursor #4D7D82
+# cursor_text_color #0B0C0D
 
 # URL underline color
-url_color #4D7D82
+# url_color #4D7D82
 
 # Window border colors - Teal electric borders
-active_border_color #4D7D82
-inactive_border_color #355C66
-bell_border_color #FF2E2E
+# active_border_color #4D7D82
+# inactive_border_color #355C66
+# bell_border_color #FF2E2E
 
 # OS Window titlebar colors
-wayland_titlebar_color system
-macos_titlebar_color system
+# wayland_titlebar_color system
+# macos_titlebar_color system
 
 # Tab bar colors - Electric navigation
-active_tab_foreground #0B0C0D
-active_tab_background #4D7D82
+# active_tab_foreground #0B0C0D
+# active_tab_background #4D7D82
 active_tab_font_style bold
-inactive_tab_foreground #9BA7A6
-inactive_tab_background #355C66
+# inactive_tab_foreground #9BA7A6
+# inactive_tab_background #355C66
 inactive_tab_font_style normal
-tab_bar_background #0B0C0D
-tab_bar_margin_color none
+# tab_bar_background #0B0C0D
+# tab_bar_margin_color none
 
 # Colors for marks - Cyberpunk highlights
-mark1_foreground #0B0C0D
-mark1_background #4D7D82
-mark2_foreground #0B0C0D
-mark2_background #355C66
-mark3_foreground #0B0C0D
-mark3_background #FF2E2E
+# mark1_foreground #0B0C0D
+# mark1_background #4D7D82
+# mark2_foreground #0B0C0D
+# mark2_background #355C66
+# mark3_foreground #0B0C0D
+# mark3_background #FF2E2E
 
 # ▓▓▓ 16 TERMINAL COLORS - CITYSCAPE PALETTE ▓▓▓
 
 # Black - Deep midnight shadows
-color0 #0B0C0D
-color8 #355C66
+# color0 #0B0C0D
+# color8 #355C66
 
 # Red - Vivid neon warnings
-color1 #FF2E2E
-color9 #FF2E2E
+# color1 #FF2E2E
+# color9 #FF2E2E
 
 # Green - No plain green, using teal variants
-color2 #4D7D82
-color10 #4D7D82
+# color2 #4D7D82
+# color10 #4D7D82
 
 # Yellow - Warm street light glow
-color3 #E4E9E8
-color11 #E4E9E8
+# color3 #E4E9E8
+# color11 #E4E9E8
 
 # Blue - Muted atmospheric teal
-color4 #355C66
-color12 #355C66
+# color4 #355C66
+# color12 #355C66
 
 # Magenta - Deep crimson accents
-color5 #7A1A1A
-color13 #7A1A1A
+# color5 #7A1A1A
+# color13 #7A1A1A
 
 # Cyan - Greenish cyan glow
-color6 #4D7D82
-color14 #4D7D82
+# color6 #4D7D82
+# color14 #4D7D82
 
 # White - Cold steel and neon
-color7 #9BA7A6
-color15 #E4E9E8
+# color7 #9BA7A6
+# color15 #E4E9E8
 
 # Extended colors for better 256-color support
-color16 #FF2E2E
-color17 #7A1A1A
+# color16 #FF2E2E
+# color17 #7A1A1A
 
 # ▓▓▓ ADVANCED SETTINGS - SYSTEM INTEGRATION ▓▓▓
 term xterm-kitty
@@ -184,13 +184,13 @@ clone_source_strategies venv,conda,env_var,path
 confirm_os_window_close 0
 
 # ▓▓▓ TRANSPARENCY - GLASS ARCHITECTURE ▓▓▓
-background_opacity 0.6
+background_opacity 0.8
 dynamic_background_opacity yes
 
 # ▓▓▓ ADVANCED VISUAL EFFECTS ▓▓▓
-background_blur 1
-background_tint 0.9
-dim_opacity 0.75
+background_blur 10
+background_tint 16
+dim_opacity 0.8
 
 # ▓▓▓ KEY MAPPINGS - CYBERPUNK CONTROLS ▓▓▓
 
@@ -269,3 +269,9 @@ map ctrl+shift+e open_url_with_hints
 # END CYBERPUNK CITYSCAPE CONFIGURATION
 # Terminal configured. Electric dreams flow through digital streets.
 # ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
+
+
+# BEGIN_KITTY_THEME
+# Noctalia
+include current-theme.conf
+# END_KITTY_THEME
