--- a/themes/tokyo-night/noctalia/settings.json
+++ b/themes/tokyo-night/noctalia/settings.json
@@ -28,7 +28,7 @@
         "capsuleOpacity": 1,
         "density": "comfortable",
         "exclusive": true,
-        "floating": true,
+        "floating": false,
         "marginHorizontal": 0.25,
         "marginVertical": 0.25,
         "monitors": [
@@ -312,7 +312,7 @@
     },
     "screenRecorder": {
         "audioCodec": "opus",
-        "audioSource": "default_output",
+        "audioSource": "both",
         "colorRange": "limited",
         "directory": "/home/monky/Videos",
         "frameRate": 60,
