--- a/general/zed/settings.json
+++ b/general/zed/settings.json
@@ -1,8 +1,11 @@
 {
+  "edit_predictions": {
+    "disabled_globs": ["*.env*"]
+  },
   "features": {
     "edit_prediction_provider": "copilot"
   },
-  "icon_theme": "VSCode Icons for Zed (Dark Angular)",
+  "icon_theme": "Colored Zed Icons Theme Dark",
   "agent": {
     "always_allow_tool_actions": true,
     "default_profile": "write",
@@ -20,9 +23,9 @@
   "ui_font_size": 16,
   "buffer_font_size": 15,
   "theme": {
-    "mode": "system",
+    "mode": "dark",
     "light": "Tokyo Night",
-    "dark": "One Dark"
+    "dark": "Tokyo Night"
   },
   "lsp": {
     "rust-analyzer": {
