--- a/themes/tokyo-night/noctalia/settings.json
+++ b/themes/tokyo-night/noctalia/settings.json
@@ -35,7 +35,7 @@
         "monitors": [
         ],
         "outerCorners": false,
-        "position": "left",
+        "position": "bottom",
         "showCapsule": true,
         "widgets": {
             "center": [
@@ -49,24 +49,7 @@
             ],
             "left": [
                 {
-                    "colorizeDistroLogo": false,
-                    "colorizeSystemIcon": "none",
-                    "customIconPath": "/home/monky/face.png",
-                    "enableColorization": false,
-                    "icon": "alien",
-                    "id": "ControlCenter",
-                    "useDistroLogo": false
-                },
-                {
-                    "diskPath": "/",
-                    "id": "SystemMonitor",
-                    "showCpuTemp": true,
-                    "showCpuUsage": true,
-                    "showDiskUsage": true,
-                    "showMemoryAsPercent": false,
-                    "showMemoryUsage": true,
-                    "showNetworkStats": true,
-                    "usePrimaryColor": true
+                    "id": "plugin:catwalk"
                 },
                 {
                     "colorizeIcons": true,
@@ -83,12 +66,15 @@
                     "id": "MediaMini",
                     "maxWidth": 145,
                     "scrollingMode": "hover",
-                    "showAlbumArt": false,
-                    "showArtistFirst": false,
+                    "showAlbumArt": true,
+                    "showArtistFirst": true,
                     "showProgressRing": true,
                     "showVisualizer": true,
                     "useFixedWidth": false,
                     "visualizerType": "linear"
+                },
+                {
+                    "id": "plugin:privacy-indicator"
                 }
             ],
             "right": [
@@ -118,7 +104,7 @@
                     "id": "Volume"
                 },
                 {
-                    "displayMode": "onhover",
+                    "displayMode": "alwaysHide",
                     "id": "Brightness"
                 },
                 {
@@ -128,6 +114,9 @@
                     "id": "Clock",
                     "useCustomFont": false,
                     "usePrimaryColor": true
+                },
+                {
+                    "id": "plugin:mini-docker"
                 }
             ]
         }
@@ -292,16 +281,16 @@
     },
     "notifications": {
         "backgroundOpacity": 1,
-        "criticalUrgencyDuration": 15,
+        "criticalUrgencyDuration": 10,
         "enableKeyboardLayoutToast": true,
         "enabled": true,
         "location": "top_right",
-        "lowUrgencyDuration": 3,
+        "lowUrgencyDuration": 2,
         "monitors": [
         ],
-        "normalUrgencyDuration": 8,
+        "normalUrgencyDuration": 5,
         "overlayLayer": true,
-        "respectExpireTimeout": false,
+        "respectExpireTimeout": true,
         "sounds": {
             "criticalSoundFile": "",
             "enabled": false,
@@ -341,31 +330,37 @@
         "powerOptions": [
             {
                 "action": "lock",
+                "command": "",
                 "countdownEnabled": true,
                 "enabled": true
             },
             {
                 "action": "suspend",
+                "command": "",
                 "countdownEnabled": true,
                 "enabled": true
             },
             {
                 "action": "hibernate",
+                "command": "",
                 "countdownEnabled": true,
                 "enabled": true
             },
             {
                 "action": "reboot",
+                "command": "",
                 "countdownEnabled": true,
                 "enabled": true
             },
             {
                 "action": "logout",
+                "command": "",
                 "countdownEnabled": true,
                 "enabled": true
             },
             {
                 "action": "shutdown",
+                "command": "",
                 "countdownEnabled": true,
                 "enabled": true
             }
