--- a/themes/tokyo-night/noctalia/plugins/mini-docker/manifest.json
+++ b/themes/tokyo-night/noctalia/plugins/mini-docker/manifest.json
@@ -1,12 +1,12 @@
 {
   "id": "mini-docker",
   "name": "Mini Docker",
-  "version": "1.0.0",
+  "version": "2.1.0",
   "minNoctaliaVersion": "3.6.0",
   "author": "MannuVilasara",
   "license": "MIT",
   "repository": "https://github.com/noctalia-dev/noctalia-plugins",
-  "description": "Manage Docker containers, volumes.",
+  "description": "Manage Docker containers, images, volumes & networks",
   "entryPoints": {
     "barWidget": "BarWidget.qml",
     "panel": "Panel.qml",
